WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233589
REGRESSION(
r286205
) [WinCairo] WebGL tests are failing
https://bugs.webkit.org/show_bug.cgi?id=233589
Summary
REGRESSION(r286205) [WinCairo] WebGL tests are failing
Fujii Hironori
Reported
2021-11-29 12:50:19 PST
REGRESSION(
r286205
) [WinCairo] WebGL tests are failing Since
r286205
(
Bug 233515
).
> CONSOLE MESSAGE: WebGL: CONTEXT_LOST_WEBGL: loseContext: context lost > CONSOLE MESSAGE: *** Error: unable to create shader 'vshader'
Buildbot: builder WinCairo-64-bit-WKL-Release-Tests build 3531
https://build.webkit.org/#/builders/60/builds/3531
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-11-29 13:20:53 PST
WinCairo-64-bit-WKL-Debug-Tests is reporting assertion failures for WebGL tests. ASSERTION FAILED: Invalid enum returned from EGL_GetConfigAttrib false ..\..\Source\WebCore\platform\graphics\angle\GraphicsContextGLANGLE.cpp(92) : WebCore::GraphicsContextGLOpenGL::drawingBufferTextureTarget 1 00007FF8F99522CA WTFCrash 2 00007FF8DCB734EA WebCore::GraphicsContextGLOpenGL::drawingBufferTextureTarget 3 00007FF8DCD35A29 WebCore::GraphicsContextGLOpenGL::GraphicsContextGLOpenGL 4 00007FF8DCD35F7F WebCore::GraphicsContextGLTextureMapper::GraphicsContextGLTextureMapper 5 00007FF8DCD35DF8 WebCore::GraphicsContextGLTextureMapper::create 6 00007FF8DCD352D7 WebCore::GraphicsContextGLOpenGL::create 7 00007FF8E05DA6E6 WebCore::GraphicsContextGL::create 8 00007FF8DFAE45C6 WebCore::WebGLRenderingContextBase::create 9 00007FF8DF8D0A3F WebCore::HTMLCanvasElement::createContextWebGL 10 00007FF8DF8D002F WebCore::HTMLCanvasElement::getContext 11 00007FF8DD717B30 WebCore::jsHTMLCanvasElementPrototypeFunction_getContextBody 12 00007FF8DD7228A9 WebCore::IDLOperation<WebCore::JSHTMLCanvasElement>::call<&WebCore::jsHTMLCanvasElementPrototypeFunction_getContextBody,0> 13 00007FF8DD7165D9 WebCore::jsHTMLCanvasElementPrototypeFunction_getContext 14 000001D98D6111BE Buildbot: builder WinCairo-64-bit-WKL-Debug-Tests build 1305
https://build.webkit.org/#/builders/32/builds/1305
Fujii Hironori
Comment 2
2021-11-29 14:05:27 PST
Committed
r286262
(
244625@main
): <
https://commits.webkit.org/244625@main
>
Radar WebKit Bug Importer
Comment 3
2021-11-29 14:06:24 PST
<
rdar://problem/85834154
>
Kimmo Kinnunen
Comment 4
2021-11-30 01:38:54 PST
Thanks! Later on, we should set the variable on GraphicsContextGLANGLE constructor. Do these tests not run on EWS?
Fujii Hironori
Comment 5
2021-11-30 02:43:42 PST
WinCairo doesn’t have a EWS testing bot yet. If you want to test your patch before landing, let me know.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug