REGRESSION(r286205) [WinCairo] WebGL tests are failing https://bugs.webkit.org/show_bug.cgi?id=233589

Unreviewed crash fix.

EGL_BIND_TO_TEXTURE_TARGET_ANGLE isn't available for Windows.
Restored the previous code.

* platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLOpenGL::drawingBufferTextureTarget):
Set m_drawingBufferTextureTarget to EGL_TEXTURE_2D for
PLATFORM(WIN) instead of querying with EGL_BIND_TO_TEXTURE_TARGET_ANGLE.


Canonical link: https://commits.webkit.org/244625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286262 268f45cc-cd09-0410-ab3c-d52691b4dbfc